# MeshShaderDemo

./: .gitignore  CMakeLists.txt  README.md  README_zh.md
env/libs/: glfw3.lib  volk.lib
shaders/: compile.bat  hello_meshlet.mesh  hello_meshlet.task  hello_meshlet_mesh.spv  hello_meshlet_task.spv  shader.frag  shader.mesh  shader_frag.spv  shader_mesh.spv  shader_task.spv
src/: hello_mesh_shader.cpp  hello_meshlet.cpp
